Chapter 1 Exercises.txt
Chapter 1 Exercises 
David Marrash

Exercise 1: What is the function of the secondary memory in a computer?

	a) Execute all of the computation and logic of the program
	b) Retrieve web pages over the Internet
>>>	c) Store information for the long term, even beyond a power cycle
	d) Take input from the user

Exercise 2: What is a program?

>>> A set of instructions that specifies a computation.

Exercise 3: What is the difference between a compiler and an interpreter?

>>> A compiler translates the entire source code into machine code at once, creating an executable file, while an interpreter translates and executes code line by line

Exercise 4: Which of the following contains “machine code”?

>>>	a) The Python interpreter
	b) The keyboard
	c) Python source file
	d) A word processing document

Exercise 5: What is wrong with the following code:

>>> primt 'Hello world!'
File "<stdin>", line 1
  primt 'Hello world!'
                     ^
SyntaxError: invalid syntax
>>>

#	The code provided contains a syntax error due to a typo in the keyword for 	
# 	printing text. The keyword 'print' is misspelled as 'primt'. In Python, the 
#	correct way to output the string 'Hello world!' to the console is by using 
#   the print function like this:

#	print('Hello world!')
#	When the corrected code is executed, it will display the text 'Hello world!' in the console.

Exercise 6: Where in the computer is a variable such as “x” stored after the following Python line finishes?

	x = 123
	a) Central processing unit
>>>	b) Main Memory
	c) Secondary Memory
	d) Input Devices
	e) Output Devices

Exercise 7: What will the following program print out:

x = 43
x = x - 1
print(x)
	a) 43
>>>	b) 42
	c) x - 1
	d) Error because x = x - 1 is not possible mathematically

Exercise 8: Explain each of the following using an example of a human capability: (1) Central processing unit, (2) Main Memory, (3) Secondary Memory, (4) Input Device, and (5) Output Device. For example, “What is the human equivalent to a Central Processing Unit”?

	1 - Central Processing Unit: human equivalent to the human brain. 
	2 - Main Memory (RAM): human equivalent to your short term memory.
	3 - Secondary Memory: human equivalent to your long term memory.
	4 - Input Device: human equivalent to our senses allowing us to provide information to the computer. Examples - a keyboard is like our hands typing, a mouse is like our eyes and hand movements combined, and microphone is like our ears. They input data into the system.
	5 - Output Device: human equivalent is our ability to communicate (express) or display the results of the computer's processing. This could include a monitor for showing visuals, speakers for producing sound, or a printer for producing physical documents. 

If you find a mistake in this book, feel free to send me a fix using Github.